[package]
name = "blorf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[dependencies]
console_error_panic_hook = "0.1.6"
wgpu = "22"
winit = { version = "0.30.4", features = ["rwh_05"] }
tracing = "0.1"
tracing-wasm = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
]}

[profile.release]
lto = true